# stopvibe

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  uninstall.ps1
crates/stopvibe-common/: Cargo.toml
crates/stopvibe-common/src/: lib.rs
crates/stopvibe-service/: Cargo.toml
crates/stopvibe-service/src/: blocker.rs  ipc.rs  main.rs  monitor.rs  protection.rs  state.rs
scripts/: prepare-tauri-resources.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ipc.rs  lib.rs  main.rs
src-tauri/windows/: hooks.nsh
src-tauri/windows/fragments/: service-install.wxs
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  styles.css
