[package]
name = "stopvibe-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "stopvibe-service"
path = "src/main.rs"

[dependencies]
stopvibe-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
windows-service = "0.7"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_Services",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
]
